--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,6 +13,4 @@ jobs:
       url: https://github.com
     steps:
       - name: deploy
-      - run:
-          echo "Testing"
-        # ...deployment-specific steps
+        run: echo "Hello World!"
